--- a/subs/aiboboxx.yaml
+++ b/subs/aiboboxx.yaml
@@ -1,30 +1,35 @@
 proxies:
   - {"name":"高性价比机场:https://kfyun.uk","type":"ss","server":"127.0.0.1","port":443,"cipher":"aes-128-gcm","password":"6601fb90e9b3"}
-  - {"name":"0|--1","type":"ss","server":"13.250.30.129","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--5","type":"ss","server":"112.213.102.228","port":4231,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--6","type":"ss","server":"54.179.104.38","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--7","type":"ss","server":"13.229.248.183","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--10","type":"ss","server":"3.1.204.240","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--11","type":"ss","server":"125.141.31.100","port":17725,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--12","type":"ss","server":"54.180.9.243","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--13","type":"ss","server":"27.255.82.135","port":61891,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--14","type":"ss","server":"35.94.52.140","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--1","type":"ss","server":"221.150.109.88","port":59686,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--2","type":"ss","server":"210.217.18.69","port":30956,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--3","type":"ss","server":"3.1.204.240","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--4","type":"ss","server":"13.229.248.183","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--5","type":"ss","server":"54.179.76.173","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--8","type":"ss","server":"54.180.9.243","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--11","type":"ss","server":"195.15.254.25","port":54748,"cipher":"chacha20-ietf-poly1305","password":"ghBuJ9pZOF9MohhGyPjo3rvilQhlw9NzBDlOVDonQN0="}
+  - {"name":"0|--12","type":"ss","server":"35.89.145.123","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--13","type":"ss","server":"13.124.147.239","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--14","type":"ss","server":"13.113.190.198","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
   - {"name":"0|--15","type":"ss","server":"13.125.199.174","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--17","type":"ss","server":"222.112.15.141","port":38471,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--18","type":"ss","server":"13.112.239.190","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--19","type":"ss","server":"210.217.18.69","port":30956,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--21","type":"ss","server":"18.142.51.90","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--22","type":"ss","server":"27.255.82.134","port":46283,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--25","type":"ss","server":"203.234.238.147","port":41951,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--27","type":"ss","server":"221.150.109.88","port":59686,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--28","type":"ss","server":"54.169.119.131","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--29","type":"ss","server":"221.150.109.21","port":7855,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--16","type":"ss","server":"18.183.217.250","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--17","type":"ss","server":"18.183.178.120","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--18","type":"ss","server":"27.255.82.49","port":61089,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--19","type":"ss","server":"168.126.234.233","port":40915,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--20","type":"ss","server":"125.141.31.100","port":17725,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--21","type":"ss","server":"112.213.102.228","port":4231,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--22","type":"ss","server":"203.234.238.147","port":41951,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--23","type":"ss","server":"13.112.239.190","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--24","type":"ss","server":"54.179.104.38","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--25","type":"ss","server":"54.169.119.131","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--26","type":"ss","server":"13.250.30.129","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--27","type":"ss","server":"18.142.51.90","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--28","type":"ss","server":"27.255.82.135","port":61891,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--29","type":"ss","server":"13.124.195.238","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
   - {"name":"0|--30","type":"ss","server":"54.179.150.222","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--31","type":"ss","server":"54.179.76.173","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--33","type":"ss","server":"13.229.99.83","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--34","type":"ss","server":"13.113.190.198","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--31","type":"ss","server":"13.229.99.83","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--32","type":"ss","server":"222.112.15.141","port":38471,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--33","type":"ss","server":"221.150.109.21","port":7855,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
   - {"name":"0|--45","type":"vmess","server":"yx1.changyouVPN.top","port":8880,"cipher":"auto","uuid":"85c7eba1-dfba-4f3e-9f7a-833fa729dc19","alterId":0,"tls":false,"network":"ws","ws-opts":{"path":"/?ed=2048","headers":{"Host":"yg.changyouVPN.top"}}}
-  - {"name":"0|--46","type":"vmess","server":"5.39.252.204","port":55899,"cipher":"auto","uuid":"791a9aad-1a8b-435d-862e-627f41025d73","alterId":0,"tls":false}
   - {"skip-cert-verify":false,"sni":"x2ger-amazon.devefun.net","type":"trojan","password":"Oe5CMj3tiO","server":"3.127.116.35","port":1935,"name":"0,15|DE_speednode_0006"}
   - {"skip-cert-verify":true,"type":"trojan","password":"vzhXXZVw","server":"223.113.54.145","port":36442,"name":"13,14|香港|@ripaojiedian"}
   - {"skip-cert-verify":true,"type":"trojan","password":"vzhXXZVw","server":"36.150.215.220","port":48544,"name":"13,14|香港2|@ripaojiedian"}
