--- a/.github/workflows/workflow_runs_cleaner.yml
+++ b/.github/workflows/workflow_runs_cleaner.yml
@@ -8,8 +8,8 @@ on:
 permissions: write-all
 
 concurrency:
-  group: "${{ github.workflow }} - ${{ github.head_ref || github.ref }}"
-  cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+  group: workflow-runs-cleaner
+  cancel-in-progress: true
 
 jobs:
   delete-workflow-runs:
