--- a/.github/workflows/subcribe_files_fetch.yml
+++ b/.github/workflows/subcribe_files_fetch.yml
@@ -33,6 +33,6 @@ jobs:
           add: subs
           author_name: github-actions[bot]
           author_email: github-actions[bot]@users.noreply.github.com
-          message: "ci: release ${{ github.ref_name }}"
+          message: "Committed by subscription-fetcher"
           push: origin HEAD:main
           pull: --rebase --autostash
